# s7forge

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md  TESTING.md  build.rs
src/: cli.rs  main.rs  test_config.rs
src/commands/: check_item_download.rs  clear_cache.rs  collection_items.rs  discover_tags.rs  download_workshop_item.rs  fetch_creator_names.rs  get_collection_items.rs  get_workshop_items.rs  mod.rs  popular_items.rs  recent_items.rs  search_workshop.rs  steam_library_paths.rs  subscribe.rs  subscribed_items.rs  unsubscribe.rs  update_workshop_item.rs  workshop_items.rs  workshop_path.rs
src/core/: client.rs  localplayer.rs  mod.rs  steam_install_paths.rs  steam_manager.rs  workshop.rs  workshop_item.rs
src/utils/: extract_quoted_strings.rs  fetch_creator_names.rs  get_cache_dir.rs  mod.rs
tests/: integration_tests.rs
tests/test_modules/: mod.rs  test_clear_cache.rs  test_cli_help.rs  test_discover_tags_help.rs  test_steam_library_paths.rs  test_workshop_path_non_steam.rs  utils.rs
tests/test_modules/steam_tests/: mod.rs  test_check_item_download.rs  test_collection_items.rs  test_discover_tags.rs  test_search_workshop_comprehensive.rs  test_search_workshop_popular.rs  test_search_workshop_recent.rs  test_search_workshop_relevance.rs  test_subscribe_and_unsubscribe.rs  test_subscribed_items.rs  test_workshop_items.rs
