[package]
name = "s7forge"
version = "0.1.0"
publish = false
description = "Steamworks utility wrapper."
authors = ["Burak Kartal"]
edition = "2024"

[profile.release]
codegen-units = 1
lto = true
strip = true

[dependencies]
bincode = "2.0.1"
futures-util = "0.3.31"
regex = "1.11.1"
rustc-hash = "2.1.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.140", features = ["preserve_order"] }
steamworks = { version = "0.11.0", features = ["serde"] }
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread", "sync"] }
once_cell = "1.20.2"
clap = { version = "4.5", features = ["derive"] }
winreg = "0.55.0"

[build-dependencies]
winres = "0.1"
