[package]
name = "s7forge"
version = "0.1.0"
publish = false
description = "A CLI utility for Steam Workshop operations via Steam SDK, designed as a sidecar binary for delegating Steam integration tasks."
authors = ["Burak Kartal"]
edition = "2024"

[profile.release]
codegen-units = 1
lto = true
strip = true
opt-level = "z"
panic = "abort"
debug = false

[dependencies]
bincode = "2.0.1"
futures-util = "0.3.31"
rustc-hash = "2.1.1"
serde = { version = "1.0.219", features = ["derive"], default-features = false }
serde_json = { version = "1.0.140", features = ["preserve_order"], default-features = false }
steamworks = { version = "0.11.0", features = ["serde"] }
tokio = { version = "1.45.1", features = ["rt-multi-thread", "sync", "macros"], default-features = false }
once_cell = "1.20.2"
clap = { version = "4.5", features = ["derive", "std", "usage", "help", "suggestions"], default-features = false }
winreg = "0.55.0"
dotenv = "0.15.0"

[dev-dependencies]
tokio-test = "0.4.4"

# Disable unit tests since we only use integration tests
[[test]]
name = "integration_tests"
path = "tests/integration_tests.rs"

[[bin]]
name = "s7forge"
test = false

[build-dependencies]
winres = "0.1"
